--- a/app.yaml
+++ b/app.yaml
@@ -4,44 +4,44 @@ threadsafe: false
 handlers:
 - url: /(.*\.css)
   mime_type: text/css
-  static_files: static/\1
-  upload: static/(.*\.css)
+  static_files: dist/\1
+  upload: dist/(.*\.css)
 
 - url: /(.*\.html)
   mime_type: text/html
-  static_files: static/\1
-  upload: static/(.*\.html)
+  static_files: dist/\1
+  upload: dist/(.*\.html)
 
 - url: /(.*\.js)
   mime_type: text/javascript
-  static_files: static/\1
-  upload: static/(.*\.js)
+  static_files: dist/\1
+  upload: dist/(.*\.js)
 
 - url: /(.*\.js\.map)
   mime_type: application/json
-  static_files: static/\1
-  upload: static/(.*\.js\.map)
+  static_files: dist/\1
+  upload: dist/(.*\.js\.map)
 
 # image files
 - url: /(.*\.(bmp|gif|ico|jpeg|jpg|png))
-  static_files: static/\1
-  upload: static/(.*\.(bmp|gif|ico|jpeg|jpg|png))
+  static_files: dist/\1
+  upload: dist/(.*\.(bmp|gif|ico|jpeg|jpg|png))
 
 # audio files
 - url: /(.*\.(mid|midi|mp3|wav))
-  static_files: static/\1
-  upload: static/(.*\.(mid|midi|mp3|wav))  
+  static_files: dist/\1
+  upload: dist/(.*\.(mid|midi|mp3|wav))  
 
 # index files
 - url: /(.+)/
-  static_files: static/\1/index.html
-  upload: static/(.+)/index.html
+  static_files: dist/\1/index.html
+  upload: dist/(.+)/index.html
 
 - url: /(.+)
-  static_files: static/\1/index.html
-  upload: static/(.+)/index.html
+  static_files: dist/\1/index.html
+  upload: dist/(.+)/index.html
 
 # site root
 - url: /
-  static_files: static/index.html
-  upload: static/index.html
+  static_files: dist/index.html
+  upload: dist/index.html
