--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 /dist
 
 /.angular/cache/
+
+# Don't add package-lock.json here.
+# It is used to make sure all installs have the exact same dependencies.
