--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,8 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/images"
+              "src/images",
+              "src/audio"
             ],
             "styles": [
               "src/styles.scss"
