Implemented attack locks in rotation.

--- a/angular.json
+++ b/angular.json
@@ -94,8 +94,7 @@
               "src/styles.scss"
             ],
             "scripts": [],
-            "karmaConfig": "karma.conf.js",
-            "codeCoverage": true
+            "karmaConfig": "karma.conf.js"
           }
         }
       }
