--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "ngx-logger": "^5.0.11",
     "rxjs": "~7.8.0",
     "strike": "^0.1.73",
     "tslib": "^2.3.0",
